# llm_test

./: Cargo.toml  flake.nix
.direnv/: flake-profile-1-link  flake-profile-10-link  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-14-link  flake-profile-15-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link  flake-profile-9-link
.jj/repo/: config.toml
.jj/working_copy/: checkout  tree_state
src/: main.rs
