[package]
name = "llm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# clblast is for accelerated inference
llm = { git = "https://github.com/rustformers/llm" , branch = "main", features = [ "clblast" ] }
rand = "0.8.5"

[profile.dev.package.ggml-sys]
opt-level = 3
